<resources>
    <string name="app_name">Earning Quiz</string>
    <string name="welcome">Welcome</string>
    <string name="powerd_by_az_solutions_lets_make_your_knoweledge_great">Powerd by AZ Solutions. Lets make your Knoweledge great</string>
    <string name="powered_by_az_solution_lets_make_your_knowledge_great">Powered by AZ Solution. Lets make your Knowledge great</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="logo">logo</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="spin">Spin</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="coinpic">coinpic</string>
    <string name="catagoery">Catagoery</string>
    <string name="left_chance_1">Left Chance: 1</string>
    <string name="historycoins">HistoryCoins</string>
    <string name="_1000">+1000</string>
    <string name="earned_coins">Earned Coins</string>
    <string name="time_and_date">Time and Date</string>
    <string name="personal_information">Personal Information</string>
    <string name="my_name">My Name</string>
    <string name="log_out">Log Out</string>
    <string name="enter_jazzcash_number">Enter JazzCash Number</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="question">Question</string>
    <string name="button">Button</string>
    <string name="next_question">Next Question</string>
    <string name="congratulations_you_won_the_chance_to_spin">Congratulations! You won the chance to Spin</string>
    <string name="sorry_you_have_lost">Sorry! You have Lost</string>
    <string name="click_to_spin">Click to Spin</string>
    <string name="total_coins_3000">Total Coins = 3000</string>
    <string name="login">Login</string>
</resources>